[143][ntp-next] Updating theming for dark mode and correct colors
Screencast: https://screencast.googleplex.com/cast/NDk4OTMyNTc5NTEzMTM5MnwyMmNmYTI4Ny0yMg

(cherry picked from commit 77941cb078d628c5078b98269571887e4ae6a23e)

Bug: 459985025, 461211711
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7152083
Commit-Queue: Omar Flores <omarflores@google.com>
Cr-Original-Commit-Position: refs/heads/main@{#1544640}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7160899
Owners-Override: Lei Zhang <thestig@chromium.org>
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7499@{#2103}
Cr-Branched-From: b30439823e5177773584139e72e0593e36863899-refs/heads/main@{#1536371}

--- a/chrome/browser/resources/new_tab_page/action_chips/action_chips.css
+++ b/chrome/browser/resources/new_tab_page/action_chips/action_chips.css
@@ -50,8 +50,9 @@
 }
 
 .deep-search {
-  background-image: url(chrome://new-tab-page/icons/deep_search.svg);
+  background-color: var(--color-sys-on-surface-subtle);
   background-size: 24px;
+  -webkit-mask-image: url(chrome://new-tab-page/icons/deep_search.svg);
 }
 
 .action-chip {
@@ -129,7 +130,7 @@
 }
 
 .chip-title {
-  color: var(--ntp-theme-text-color);
+  color: var(--color-sys-on-surface);
   font-size: 14px;
   font-weight: 500;
   overflow: hidden;
@@ -140,7 +141,7 @@
 }
 
 .chip-body {
-  color: #474747;
+  color: var(--color-sys-on-surface-subtle);
   font-size: 12px;
   font-weight: 400;
 }
